[S3KMD-643] correcting overflowing on card item.

--- a/swinburne-aem-prototype/source/scss/components/_pagelist.scss
+++ b/swinburne-aem-prototype/source/scss/components/_pagelist.scss
@@ -311,8 +311,8 @@ $border-color: #1d1f20;
           border: 0;
           min-height: 100%;
           min-width: 100%;
-          @include media-breakpoint-down(xs) {
-            min-height: 250px;
+          @include media-breakpoint-down(sm) {
+            min-height: 300px;
           }
         }
       }
